@@ -4,6 +4,8 @@ http://svn.edgewall.org/repos/genshi/tags/0.6.1/
 
  * Fix for error in how `HTMLFormFiller` would handle `textarea` elements if
    no value was not supplied form them.
+ * The `HTMLFormFiller` now correctly handles check boxes and radio buttons
+   with an empty `value` attribute.
 
 
 Version 0.6
